# kanri-cli

./: .gitignore  Cargo.toml  Makefile  README.md
crates/kanri-cli/: Cargo.toml
crates/kanri-cli/src/: main.rs
crates/kanri-core/: Cargo.toml
crates/kanri-core/src/: archive.rs  b2.rs  cache.rs  cleanable.rs  config.rs  docker.rs  error.rs  flutter.rs  go.rs  gradle.rs  haskell.rs  large_files.rs  lib.rs  node.rs  python.rs  rclone.rs  rust.rs  storage.rs  utils.rs  xcode.rs
