[workspace]
resolver = "2"
members = [
    "crates/kanri-cli",
    "crates/kanri-core",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Yuta Kanishimura"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/kanri"

[workspace.dependencies]
# CLI
clap = { version = "4.5", features = ["derive", "cargo"] }

# File system
walkdir = "2.5"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Display
indicatif = "0.17"
colored = "2.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Testing
tempfile = "3.10"

# Async (for future use)
tokio = { version = "1.37", features = ["full"] }
