[package]
name = "kanri-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "kanri"
path = "src/main.rs"

[dependencies]
kanri-core = { path = "../kanri-core" }

clap.workspace = true
clap_complete.workspace = true
anyhow.workspace = true
colored.workspace = true
indicatif.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
